# agent-reflections

./: .env.example  .gitignore  README.md  pyproject.toml
src/agent_reflections/: __init__.py  cli.py  config.py  context.py  mercury.py  session.py
tests/: test_cli.py  test_config.py  test_context.py  test_mercury.py  test_session.py
tests/fixtures/: sample_session.jsonl
