[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-reflections"
version = "0.1.0"
description = "Reflection pipeline for autonomous agents — context gathering and self-reflection"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
reflect = "agent_reflections.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_reflections"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 99
target-version = ["py311"]
